Added Mine Ant build to IntelliJ project